# ferrum

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
agents/grid-market-maker/: agent.md  config.yml  learnings.md
config/: ferrum.toml
crates/ferrum-agent/: Cargo.toml
crates/ferrum-agent/src/: agent.rs  definition.rs  learnings.rs  lib.rs  session.rs
crates/ferrum-api/: Cargo.toml
crates/ferrum-api/src/: auth.rs  lib.rs  routes.rs  server.rs
crates/ferrum-backtest/: Cargo.toml
crates/ferrum-backtest/src/: engine.rs  lib.rs  metrics.rs  strategy.rs  types.rs
crates/ferrum-cli/: Cargo.toml
crates/ferrum-cli/src/: main.rs
crates/ferrum-core/: Cargo.toml
crates/ferrum-core/src/: config.rs  error.rs  events.rs  lib.rs  traits.rs  types.rs
crates/ferrum-dashboard/: Cargo.toml
crates/ferrum-dashboard/src/: api.rs  handlers.rs  lib.rs  server.rs
crates/ferrum-exchange/: Cargo.toml
crates/ferrum-exchange/src/: lib.rs  registry.rs  shared.rs
crates/ferrum-exchange/src/binance/: mod.rs  rest.rs  types.rs
crates/ferrum-exchange/src/bybit/: mod.rs  rest.rs  types.rs
crates/ferrum-exchange/src/hyperliquid/: mod.rs  rest.rs  types.rs
crates/ferrum-exchange/src/okx/: mod.rs  rest.rs  types.rs
crates/ferrum-executors/: Cargo.toml
crates/ferrum-executors/src/: factory.rs  grid.rs  lib.rs  order.rs  position.rs  triple_barrier.rs
crates/ferrum-llm/: Cargo.toml
crates/ferrum-llm/src/: client.rs  lib.rs  prompt.rs
crates/ferrum-local-llm/: Cargo.toml
crates/ferrum-local-llm/src/: config.rs  engine.rs  lib.rs  provider.rs
crates/ferrum-mcp/: Cargo.toml
crates/ferrum-mcp/src/: lib.rs  server.rs  tools.rs
crates/ferrum-orchestrator/: Cargo.toml
crates/ferrum-orchestrator/src/: coordinator.rs  lib.rs  message.rs  router.rs
crates/ferrum-paper/: Cargo.toml
crates/ferrum-paper/src/: engine.rs  lib.rs  tracker.rs  types.rs
crates/ferrum-positions/: Cargo.toml
crates/ferrum-positions/src/: lib.rs  store.rs  tracker.rs
crates/ferrum-rag/: Cargo.toml
crates/ferrum-rag/src/: embeddings.rs  lib.rs  pipeline.rs  qdrant.rs  store.rs
crates/ferrum-risk/: Cargo.toml
crates/ferrum-risk/src/: engine.rs  lib.rs
crates/ferrum-routines/: Cargo.toml
crates/ferrum-routines/src/: alerts.rs  indicators.rs  lib.rs  webhooks.rs
crates/ferrum-streaming/: Cargo.toml
crates/ferrum-streaming/src/: binance.rs  lib.rs  manager.rs  traits.rs
crates/ferrum-telegram/: Cargo.toml
crates/ferrum-telegram/src/: bot.rs  handlers.rs  lib.rs
docs/: ARCHITECTURE.md  AUTORESEARCH_PLAN.md  BONBO_KNOWLEDGE_MODULE_PROPOSAL.md  CODE_REVIEW_REPORT.md  CRYPTO_RESEARCH_PLAN.md  DEEP_RESEARCH_PLAN.md  DEPLOYMENT.md  GUIDE.md  IMPROVEMENT_RESEARCH_2025.md  META_HARNESS.md  OBSIDIAN_RESEARCH_REPORT.md  OBSIDIAN_VS_SQLITE_COMPARISON.md  PROJECT_README.md  SPECKIT_INTEGRATION_DESIGN.md  SPECKIT_RESEARCH_REPORT.md  TELEGRAM_GUIDE.md  USAGE_GUIDE.md  activity.md  autoresearch_tasks.md  glibc-research.md
tasks/: todo.md
