[package]
name = "ferrum-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ferrum"
path = "src/main.rs"

[dependencies]
ferrum-core = { workspace = true }
ferrum-agent = { workspace = true }
ferrum-exchange = { workspace = true }
ferrum-api = { workspace = true }
ferrum-mcp = { workspace = true }
ferrum-telegram = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }