[package]
name = "ferrum-positions"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrum-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }